<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cook Assistant</string>
    <string name="email_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">BACK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="allergy">Allergy</string>
    <string name="add">Add</string>
    <string name="my_recipes">My Recipes</string>
    <string name="allergies">Allergies</string>
    <string name="my_rating">My Rating</string>
    <string name="notifications">Notifications</string>
    <string name="my_details">My Details</string>
    <string name="settings">Settings</string>
    <string name="temporary_text_replace_with_image">Temporary Text, replace with image</string>
    <string name="tap_an_allergy_to_remove_it">Tap an allergy to remove it.</string>
    <string name="update_details">Update Details</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="amount_of_ingredient">Amount Of Ingredient</string>
    <string name="string_add">Add</string>
    <string name="measurement_type">Measurement Type</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="items_will_be_removed_from_your_pantry_2_days_after_expiry_date">Items will be removed from your pantry 2 days after expiry date.</string>
    <string name="remove">Remove</string>
    <string name="go_to_add_new_recipe">Go to add new recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="remove_ingredient">Remove Ingredient</string>
    <string name="type_your_step_here">Type your step here</string>
    <string name="add_step">add step</string>
    <string name="serves">Serves</string>
    <string name="upload_recipe">Upload Recipe</string>
    <string name="add_image">Add Image</string>
    <string name="uploadimageplaceholder">uploadImagePlaceholder</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="staricon">StarIcon</string>
    <string name="peopleicon">PeopleIcon</string>
    <string name="clockicon">ClockIcon</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="comment">Comment</string>
    <string name="rate_this_recipe">Rate This Recipe:</string>
    <string name="star1buttonicon">star1buttonicon</string>
    <string name="star2buttonicon">star2buttonicon</string>
    <string name="star3buttonicon">star3buttonicon</string>
    <string name="star4buttonicon">star4buttonicon</string>
    <string name="star5buttonicon">star5buttonicon</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="add_comment">Add Comment</string>
    <string name="comments">Comments</string>
    <string name="report">Report</string>
    <string name="comment_on_this_recipe">Comment on this recipe:</string>
    <string name="type_your_comment_here">Type your comment here...</string>
    <string name="reason_for_reporting">Reason for reporting:</string>
    <string name="why_do_you_want_to_report_this">Why do you want to report this?</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="you_currently_do_not_have_any_ratings">You currently do not have any ratings</string>
    <string name="your_rating_is_an_average_of_all_scores_taken_from_your_uploaded_recipes">Your rating is an average of all scores taken from your uploaded recipes</string>
    <string name="meal_1">Meal 1</string>
    <string name="empty">empty</string>
    <string name="change">Change</string>
    <string name="meal_2">Meal 2</string>
    <string name="meal_3">Meal 3</string>
    <string name="cooking_a_planned_meal_will_remove_the_ingredients_from_your_pantry">Cooking a planned meal will remove the ingredients from your pantry.</string>
    <string name="to_add_a_meal_to_your_plan_it_must_be_in_your_favourites_first">To add a meal to your plan it must be in your favourites first.</string>
    <string name="click_to_choose_a_date">Click to choose a date...</string>
    <string name="view">View</string>
    <string name="cook">Cook</string>
    <string name="search_image">Search Image</string>
    <string name="most_viewed_recipes_of_all_time">Most Viewed Recipes Of All Time</string>
    <string name="most_favourited_recipes">Most Favourited Recipes</string>
    <string name="recipes_based_on_your_current_pantry">Recipes Based On Your Current Pantry</string>
    <string name="quick_recipes_in_under_20_minutes">Quick Recipes In Under 20 Minutes</string>
    <string name="search_for_recipes_that_use_only_ingredients_in_your_pantry">Search for recipes that use ONLY ingredients in your pantry</string>
    <string name="keywords_separate_with_commas">Keywords: Separate with commas</string>
    <string name="search">Search</string>
    <string name="people_to_serve">People To Serve</string>
    <string name="_1_person">1 Person</string>
    <string name="recipe_type">Recipe Type</string>
    <string name="max_cooking_time">Max Cooking Time</string>
    <string name="_5_minutes">5 Minutes</string>
    <string name="only_show_healthy_options">Only Show Healthy Options</string>
    <string name="is_this_recipe_healthy">Is this recipe Healthy?</string>
    <string name="top_recipes_based_on_your_search">Top Recipes Based On Your Search</string>
    <string name="most_relevant_recipes_to_your_search">Most Relevant Recipes To Your Search</string>
    <string name="your_favourites_you_can_cook_now">Your Favourites You Can Cook Now</string>
    <string name="show_recipes_that_include_your_allergies_as_ingredients">Show Recipes That Include Your Allergies As Ingredients</string>
    <string name="please_re_enter_your_current_password_to_update_details">Please re-enter your current password to update details</string>
</resources>