<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ViewRecipeFragment">

    <ImageView
        android:id="@+id/viewRecipeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/recipe_image"
        android:scaleType="fitCenter" />


    <LinearLayout
        android:id="@+id/viewRecipeDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewRecipeImage"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp">

            <ImageView
                android:id="@+id/viewRecipeClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/clockicon"
                android:src="@drawable/ic_clock_24" />

            <TextView
                android:id="@+id/viewRecipeCookingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginEnd="50sp">

            <ImageView
                android:id="@+id/viewRecipeServeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/peopleicon"
                android:src="@drawable/ic_baseline_people_24" />

            <TextView
                android:id="@+id/viewRecipeServing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/viewRecipeStarImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/staricon"
                android:src="@drawable/ic_baseline_star_black_24" />

            <TextView
                android:id="@+id/viewRecipeRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="30sp"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recipeTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/viewRecipeDetailsLayout"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/viewRecipeName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/favouriteRecipeButton"
            android:layout_height="match_parent"
            android:contentDescription="@string/favourite_button"
            android:src="@drawable/ic_baseline_star_outline_yellow_24"
            android:layout_width="wrap_content" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/viewRecipeScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/viewRecipeButtonLayout"
        android:layout_below="@id/recipeTitleLayout"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipeIngredientsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/viewRecipeIngredientsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/recipeStepsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/viewRecipeStepsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/viewRecipeButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rateRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:text="@string/rate" />

        <Button
            android:id="@+id/commentRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginEnd="5sp"/>

        <Button
            android:id="@+id/removeRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/remove"
            android:layout_marginEnd="5sp"/>


        <Button
            android:id="@+id/reportRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"/>


    </LinearLayout>

</RelativeLayout>