<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/ingredientNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/ingredient_name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/ingredientAmountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/amount_of_ingredient"
        android:autofillHints="" />


    <TextView
        android:id="@+id/measurementTypeLabelRecipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/measurement_type"/>

    <Spinner
        android:id="@+id/measurementTypeDropdownRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:spinnerMode="dropdown"/>

    <ImageView
        android:id="@+id/imageRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/remove_ingredient"
        app:srcCompat="@drawable/ic_close_24" />


</LinearLayout>